[package]
name = "time_convolver"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
indicatif = "0.18"
symphonia = { version = "0.5.5", features = ["all"] }
ebur128 = "0.1.10"

[dependencies.egui]
version = "0.28"
default-features = false
features = ["default_fonts"]

[dependencies.eframe]
version = "0.28"
default-features = false
features = ["default_fonts", "wgpu"]

[dependencies.rodio]
version = "0.19"

[dependencies.rfd]
version = "0.15"

[dependencies.winit]
version = "0.29"

[dependencies.rubato]
version = "0.15"

[dependencies.thiserror]
version = "2"
